# autoclaude

./: .gitignore  AGENTS.md  README.md  pyproject.toml
autoclaude/: __init__.py  ado_client.py  agent.py  cli.py  config.py  context.py  dag.py  github_client.py  loop.py  models.py  orchestrator.py  permission_guard.py  platform.py  processor.py  progress.py  quality.py
tests/: test_context.py  test_dag.py  test_loop.py  test_processor.py  test_progress.py  test_quality.py
