[project]
name = "autoclaude"
version = "0.1.0"
description = "Autonomous GitHub issue processor powered by Claude"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "PyGithub>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
autoclaude = "autoclaude.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
